test/fail/wasm_unpack_loop00.v3
//@execute 0=1
// BUG (wasm target only): an iN.unpack that must NARROW -- i.e. the container
// is wider than the packing width, or is signed -- traps with UNREACHABLE when
// it appears inside a loop. Reproduces on -target=wasm via the .bin.wast runner:
//   assert_return expected 1, got trap[UNREACHABLE]
// Both ingredients are needed:
//   - outside a loop, the same narrowing unpack is fine (even with a runtime input)
//   - inside a loop, an EXACT-width unsigned container is fine (u8 for an 8-bit type)
// Passes on v3i, jvm and all native targets.
type P(a: u4, b: u4) { }
def up(v: u16) -> P { return u16.unpack<P>(v); }   // u16 container, 8-bit payload
def main(k: int) -> int {
	for (i < 256) {
		if (up(u16.view(0xAB) | u16.view(i << 8)).a != 0xA) return -i-1;
	}
	return 1;
}
